# f7-team

./: .gitignore  README.md  addressbook.pkl  autocomplete.py  command_handler.py  delete.py  edit_contact.py  main.py  notes.pkl  notes.py  pyproject.toml  requirements.txt  search_contacts.py
src/: autocomplete.py  command_handler.py  delete.py  edit_contact.py  main.py  notes.py  styles.py
src/addressbook/: book.py  fields.py  record.py  utils.py
src/task-2/: main.py
