[build-system]
requires = ["prompt_toolkit>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addressbook-bot"
version = "0.1.0"
description = "Command-line bot for managing contacts, notes, and birthdays with colorful terminal output"
requires-python = ">=3.8"
dependencies = [
    "prompt_toolkit>=3.0.0"
]

[project.scripts]
addressbook = "src.main:main"
